plugins {
	id 'fabric-loom' version '1.7-SNAPSHOT'
	id 'maven-publish'
	id "com.github.hexomod.replace.token.preprocessor" version "0.4"
}

sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21

archivesBaseName = project.archives_base_name
version = project.mod_version
group = project.maven_group

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	// Google Gson for JSON parsing and writing
	implementation "com.google.code.gson:gson:2.10.1"

	// Apache Commons IO to move entire directories
	implementation 'commons-io:commons-io:2.16.1'
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	// Minecraft 1.25 upwards uses Java 21.
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.archivesBaseName}"}
	}
}

// configure the maven publication
publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}

// https://github.com/HexoMod-tools/gradle.replace.token.preprocessor.plugin
replaceTokenPreprocessorSettings {
	verbose = true     // default: false

	//extensions = [ ".properties",  ".yaml",  ".yml" ]
	//extension = ".java"

	java {
		enable = true   // default: true
	}

	resources {
		enable = true   // default: true
	}

	replace '@MOD_VERSION@': project.version
}

tasks.named("assemble") {
	sourceSets {
		main {
			java {
				srcDirs = ["${buildDir}/preprocessor/replace/main/java"]
			}
			resources {
				srcDirs = ["${buildDir}/preprocessor/replace/main/resources"]
			}
		}
	}

	dependsOn(":replacePreprocessorJava", ":replacePreprocessorResource")
	inputs.files sourceSets.main.allJava
}

tasks.named("sourcesJar") {
	dependsOn(":replacePreprocessorJava", ":replacePreprocessorResource")
}